# little-gemma-tools

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: far-field-service.md
proto/: lg_media_proto.h
script/: far-field.sh  respeaker-aec.sh  speakerphone.sh  voicebox.sh  voicedemo.py
src/: aec-null.c  aec-webrtc.cpp  aec.h  clausecat.c  far-field-service.c  mmcat.c  voicecat.c
test/: stub-whisper.bat  stub-whisper.sh
